--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 text-center">
-            <h2>About Me</h2>
+            <h2>{{ 'aboutme' | translate }}</h2>
             <hr/>
         </div>
     </div>
@@ -13,7 +13,7 @@
                 </div>
                 <div class="flex-profile-details">
         <span>
-            <b>Name</b> : Ben Amor Wassim
+            <b>{{ 'name' | translate }}</b> : Ben Amor Wassim
         </span>
                     <span>
             <b>Date Of Birth</b> : 16/08/1994
