--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -1,3 +1,47 @@
-<p>
-    gallery here
-</p>
+<div class="container" ng-controller="GalleryController as galleryCtrl">
+    <script type="text/ng-template" id="myModalContent.html">
+        <div class="modal-header">
+            <h3 class="modal-title" id="modal-title">{{$ctrl.photoSelected.name}}</h3>
+        </div>
+        <div class="modal-body flex-vertical" id="modal-body">
+            <img src="{{$ctrl.photoSelected.url}}" class="image-modal">
+            <div style="margin-top: 20px;">
+                <b>Category : </b>{{$ctrl.photoSelected.category}}
+            </div>
+            <div class="flex-horizental">
+                <i class="glyphicon glyphicon-tags" style="margin-right: 10px;"></i> <span ng-repeat="tag in $ctrl.photoSelected.tags">{{tag}},</span>
+            </div>
+            <div>
+                <b>Description :</b> {{$ctrl.photoSelected.description}}
+            </div>
+
+
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
+        </div>
+    </script>
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <h2>Gallery</h2>
+            <hr/>
+        </div>
+
+        <div class="col-xs-12 col-md-6 col-md-offset-3 text-center">
+            <div class="form-group form-inline">
+                <input ng-change="changeFilter()" name="filter" type="text" ng-model="galleryCtrl.filter" class="form-control" placeholder="Type a keyword ...">
+                <select name="category" ng-change="changeCategory()" ng-model="galleryCtrl.category" class="form-control" ng-options="category for category in galleryCtrl.categories" title="Stars" required>
+                    <option value>Category</option>
+                </select>
+            </div>
+        </div>
+
+        <br/>
+
+
+
+        <div ng-repeat="photo in galleryCtrl.searchphotos" class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter hdpe">
+            <img src="{{photo.url}}" class="img-gallery" ng-click="galleryCtrl.photoSelected=photo;galleryCtrl.open()">
+        </div>
+    </div>
+</div>
