transle done - fix gallery filter

--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -16,13 +16,13 @@
             <b>{{ 'name' | translate }}</b> : Ben Amor Wassim
         </span>
                     <span>
-            <b>Date Of Birth</b> : 16/08/1994
+            <b>{{ 'birthdate' | translate }}</b> : 16/08/1994
         </span>
                     <span>
-            <b>Nationalité</b> : Tunisienne
+            <b>{{ 'nationality' | translate }}</b> : {{ 'tunisian' | translate }}
         </span>
                     <span>
-           <b>Téléphone</b>  : +216 96 298 888
+           <b>{{ 'tel' | translate }}</b>  : +216 96 298 888
         </span>
                 </div>
             </div>
@@ -31,78 +31,74 @@
     <!-- Example row of columns -->
     <div class="row" style="margin-top: 20px;">
         <div class="col-md-4">
-            <h3>Diplômes & Formations</h3>
+            <h3>{{ 'diplome' | translate }}</h3>
             <hr>
-            <h4>Cycle d’ingénieur en Génie Logiciel</h4>
-            <h5>Septembre 2015 - Présent</h5>
+            <h4>{{ 'cycleing' | translate }}</h4>
+            <h5>{{ 'septembre' | translate }} 2015 - {{ 'present' | translate }}</h5>
             <p>
-                Institut National des Sciences Appliquées et de Technologie (INSAT) Ariana,Tunisie
+                {{ 'insat' | translate }}
             </p>
             <hr>
 
-            <h4>Cycle préparatoire intégré</h4>
-            <h5>Septembre 2013 - Juin 2015</h5>
+            <h4>{{ 'prepa' | translate }}</h4>
+            <h5>{{ 'septembre' | translate }} 2013 - {{ 'juin' | translate }} 2015</h5>
             <p>
-                Institut National des Sciences Appliquées et de Technologie (INSAT) Ariana,Tunisie
+                {{ 'insat' | translate }}
             </p>
             <hr>
 
-            <h4>Baccalauréat</h4>
+            <h4>{{ 'bac' | translate }}</h4>
             <h5>2013</h5>
             <p>
-                Lycée Pilote Sfax - Section : Mathématiques - Mention Très Bien
+                {{ 'pilote' | translate }}
             </p>
         </div>
         <div class="col-md-4">
-            <h3>Expériences professionelles</h3>
+            <h3>{{ 'pro' | translate }}</h3>
             <hr>
-            <h4>Développeur Web & Designer Web à temps partiel</h4>
-            <h5>Mars 2016 - Présent</h5>
+            <h4>{{ 'devweb' | translate }}</h4>
+            <h5>Mars 2016 - {{ 'present' | translate }}</h5>
             <p>
                 Vynd Solutions SARL
             </p>
-            <h6>- Conception des plateformes : Wireframes & Interfaces Web.<br>
-                - Intégration HTML/CSS<br>
-                - Implémentation des applications web : Angular 2/4</h6>
+            <h6>- {{ 'conception' | translate }}<br>
+                - {{ 'integration' | translate }}<br>
+                - {{ 'implementation' | translate }}</h6>
             <hr>
 
-            <h4>Stage Ingénieur / Développement web</h4>
-            <h5>Juillet 2017 - Aout 2017</h5>
+            <h4>{{ 'stage' | translate }}</h4>
+            <h5>{{ 'juillet' | translate }} 2017 - {{ 'aout' | translate }} 2017</h5>
             <p>
                 Vynd Solutions SARL
             </p>
-            <h6>Conception et développement de la plateforme de gestion pour les commerçants
-                partenaires de Vynd : Vynd Manager.<br>
+            <h6>{{ 'vyndmanager' | translate }}<br>
                 Technologies: Angular 4, Bootstrap 4, HTML 5, CSS 3, Photoshop, Illustrator</h6>
             <hr>
 
-            <h4>Stage Ingénieur / Développement web</h4>
-            <h5>Juillet 2016 - Aout 2016</h5>
+            <h4>{{ 'stage' | translate }}</h4>
+            <h5>{{ 'juillet' | translate }} 2016 - {{ 'aout' | translate }} 2016</h5>
             <p>
                 Vynd Solutions SARL
             </p>
-            <h6>Conception et développement de la plateforme communautaire web responsive de
-                Vynd : Vynd User.<br>
+            <h6>{{ 'vynduser' | translate }}<br>
                 Technologies: Angular 2, Bootstrap 3, HTML 5, CSS 3, Photoshop, Illustrator</h6>
         </div>
         <div class="col-md-4">
-            <h3>Projets Publiques</h3>
+            <h3>{{ 'project' | translate }}</h3>
             <hr>
             <h4>FinanceAPP</h4>
             <h5>2017</h5>
-            <h6>Application Android qui présente les différents cours du marché tunisien, les banques
-                et les établissements financiers proches et un convertisseur de devise.</h6>
+            <h6>{{ 'android' | translate }}</h6>
             <hr>
 
             <h4>WKS Learnign</h4>
             <h5>2017</h5>
-            <h6>Conception et développement d’une plateforme web de e-learning.</h6>
+            <h6>{{ 'elearning' | translate }}</h6>
             <hr>
 
             <h4>OneShotGame</h4>
             <h5>2016</h5>
-            <h6>Conception et développement d’une application mobile Android se résumant à
-                un jeu de réflexion développé avec Unity 3D.</h6>
+            <h6>{{ 'unity' | translate }}</h6>
             <hr>
 
         </div>
