--- a/index.html
+++ b/index.html
@@ -24,13 +24,15 @@
         </div>
         <div class="collapse navbar-collapse" uib-collapse="isNavCollapsed">
             <ul class="nav navbar-nav pull-right flex-horizental-header">
-                <li><a ui-sref="aboutme">About Me</a></li>
-                <li><a ui-sref="review">Review</a></li>
-                <li><a ui-sref="gallery">Gallery</a></li>
+                <li><a ui-sref="aboutme">{{ 'aboutme' | translate }}</a></li>
+                <li><a ui-sref="review">{{ 'review' | translate }}</a></li>
+                <li><a ui-sref="gallery">{{ 'gallery' | translate }}</a></li>
                 <li>
                     <div class="btn-group" uib-dropdown is-open="status.isopen">
                         <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
-                            <flag country="fr" size="16"></flag> {{selectedItem}} <span class="caret"></span>
+                            <flag ng-if="selectedItem=='FR'" country="fr" size="16"></flag>
+                            <flag ng-if="selectedItem=='EN'" country="us" size="16"></flag>
+                            {{selectedItem}} <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu language-dropdown" uib-dropdown-menu role="menu" aria-labelledby="single-button">
                             <li role="menuitem"><a ng-click="changeLanguage('FR')" href=""><flag country="fr" size="16"></flag> FR</a></li>
@@ -50,7 +52,7 @@
 <div class="footer">
     <div class="row">
         <div class="col-xs-12 text-center">
-            Made with <i style="color: red;" class="glyphicon glyphicon-heart"></i> in Tunis
+            {{ 'madewith' | translate }} <i style="color: red;" class="glyphicon glyphicon-heart"></i> {{ 'intunis' | translate }}
         </div>
 
     </div>
