--- a/review/review.html
+++ b/review/review.html
@@ -2,7 +2,7 @@
     <div growl></div>
     <div class="row">
         <div class="col-xs-12 text-center">
-            <h2>Review</h2>
+            <h2>{{ 'review' | translate }}</h2>
             <hr/>
         </div>
     </div>
@@ -12,11 +12,11 @@
             <!--  Review Form -->
             <form name="reviewForm" ng-submit="reviewCtrl.addReview()" novalidate>
                 <!--  Review Form -->
-                <h4>Submit a Review</h4>
+                <h4>{{ 'submitreview' | translate }}</h4>
 
                 <fieldset class="form-group form-inline">
-                    <input name="firstname" ng-model="reviewCtrl.review.firstname" type="text" class="form-control" placeholder="Your firstname" title="firstname" required />
-                    <input name="lastname" ng-model="reviewCtrl.review.lastname" type="text" class="form-control" placeholder="Your lastname" title="lastname" required />
+                    <input name="firstname" ng-model="reviewCtrl.review.firstname" type="text" class="form-control" placeholder="{{ 'firstname' | translate }}" title="firstname" required />
+                    <input name="lastname" ng-model="reviewCtrl.review.lastname" type="text" class="form-control" placeholder="{{ 'lastname' | translate }}" title="lastname" required />
                 </fieldset>
                 <fieldset class="form-group">
                     <input name="email" ng-model="reviewCtrl.review.email" type="email" class="form-control" placeholder="jimmyDean@example.org" title="Email" required />
@@ -26,14 +26,14 @@
                 </fieldset>
                 <fieldset class="form-group">
                     <select name="stars" ng-model="reviewCtrl.review.stars" class="form-control" ng-options="stars for stars in [5,4,3,2,1]" title="Stars" required>
-                        <option value>Rate the Site</option>
+                        <option value>{{ 'ratesite' | translate }}</option>
                     </select>
                 </fieldset>
                 <fieldset class="form-group">
-                    <textarea name="content" ng-model="reviewCtrl.review.content" class="form-control" placeholder="Write a short review of the site..." title="Review" required></textarea>
+                    <textarea name="content" ng-model="reviewCtrl.review.content" class="form-control" placeholder="{{'writereview' | translate}}" title="Review" required></textarea>
                 </fieldset>
                 <fieldset class="form-group">
-                    <input type="submit" class="btn btn-primary pull-right" value="Submit Review" />
+                    <input type="submit" class="btn btn-primary pull-right" value="{{'submit' | translate}}" />
                 </fieldset>
             </form>
 
